--- a/KA/src/org/kinalarcade/view/WordleView.fxml
+++ b/KA/src/org/kinalarcade/view/WordleView.fxml
@@ -1,14 +1,100 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.net.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import java.net.URL?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.kinalarcade.controller.WordleController">
-    <stylesheets>
-        <URL value="@/org/kinalarcade/resource/wordleview.css"/>
-    </stylesheets>
+<AnchorPane id="AnchorPane" prefHeight="650.0" prefWidth="550.0" styleClass="background" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.kinalarcade.controller.WordleController">
+   <stylesheets>
+       <URL value="@/org/kinalarcade/resource/wordleview.css" />
+   </stylesheets>
+   <children>
+      <Label fx:id="bienvenida" alignment="CENTER" layoutX="25.0" layoutY="20.0" prefHeight="40.0" prefWidth="500.0" text="¡Bienvenido a Wordle! Adivina la palabra de 5 letras." textAlignment="CENTER">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+
+      <GridPane alignment="CENTER" hgap="5.0" vgap="5.0" layoutX="125.0" layoutY="80.0" prefHeight="360.0" prefWidth="300.0">
+         <columnConstraints>
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="60.0" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="60.0" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="60.0" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="60.0" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="60.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints valignment="CENTER" vgrow="SOMETIMES" prefHeight="60.0" minHeight="10.0" />
+            <RowConstraints valignment="CENTER" vgrow="SOMETIMES" prefHeight="60.0" minHeight="10.0" />
+            <RowConstraints valignment="CENTER" vgrow="SOMETIMES" prefHeight="60.0" minHeight="10.0" />
+            <RowConstraints valignment="CENTER" vgrow="SOMETIMES" prefHeight="60.0" minHeight="10.0" />
+            <RowConstraints valignment="CENTER" vgrow="SOMETIMES" prefHeight="60.0" minHeight="10.0" />
+            <RowConstraints valignment="CENTER" vgrow="SOMETIMES" prefHeight="60.0" minHeight="10.0" />
+         </rowConstraints>
+         <children>
+            <Label fx:id="box00" styleClass="wordle-box" text=" " />
+            <Label fx:id="box01" styleClass="wordle-box" text=" " GridPane.columnIndex="1" />
+            <Label fx:id="box02" styleClass="wordle-box" text=" " GridPane.columnIndex="2" />
+            <Label fx:id="box03" styleClass="wordle-box" text=" " GridPane.columnIndex="3" />
+            <Label fx:id="box04" styleClass="wordle-box" text=" " GridPane.columnIndex="4" />
+
+            <Label fx:id="box10" styleClass="wordle-box" text=" " GridPane.rowIndex="1" />
+            <Label fx:id="box11" styleClass="wordle-box" text=" " GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label fx:id="box12" styleClass="wordle-box" text=" " GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Label fx:id="box13" styleClass="wordle-box" text=" " GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <Label fx:id="box14" styleClass="wordle-box" text=" " GridPane.columnIndex="4" GridPane.rowIndex="1" />
+
+            <Label fx:id="box20" styleClass="wordle-box" text=" " GridPane.rowIndex="2" />
+            <Label fx:id="box21" styleClass="wordle-box" text=" " GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label fx:id="box22" styleClass="wordle-box" text=" " GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Label fx:id="box23" styleClass="wordle-box" text=" " GridPane.columnIndex="3" GridPane.rowIndex="2" />
+            <Label fx:id="box24" styleClass="wordle-box" text=" " GridPane.columnIndex="4" GridPane.rowIndex="2" />
+
+            <Label fx:id="box30" styleClass="wordle-box" text=" " GridPane.rowIndex="3" />
+            <Label fx:id="box31" styleClass="wordle-box" text=" " GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label fx:id="box32" styleClass="wordle-box" text=" " GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <Label fx:id="box33" styleClass="wordle-box" text=" " GridPane.columnIndex="3" GridPane.rowIndex="3" />
+            <Label fx:id="box34" styleClass="wordle-box" text=" " GridPane.columnIndex="4" GridPane.rowIndex="3" />
+
+            <Label fx:id="box40" styleClass="wordle-box" text=" " GridPane.rowIndex="4" />
+            <Label fx:id="box41" styleClass="wordle-box" text=" " GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Label fx:id="box42" styleClass="wordle-box" text=" " GridPane.columnIndex="2" GridPane.rowIndex="4" />
+            <Label fx:id="box43" styleClass="wordle-box" text=" " GridPane.columnIndex="3" GridPane.rowIndex="4" />
+            <Label fx:id="box44" styleClass="wordle-box" text=" " GridPane.columnIndex="4" GridPane.rowIndex="4" />
+
+            <Label fx:id="box50" styleClass="wordle-box" text=" " GridPane.rowIndex="5" />
+            <Label fx:id="box51" styleClass="wordle-box" text=" " GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Label fx:id="box52" styleClass="wordle-box" text=" " GridPane.columnIndex="2" GridPane.rowIndex="5" />
+            <Label fx:id="box53" styleClass="wordle-box" text=" " GridPane.columnIndex="3" GridPane.rowIndex="5" />
+            <Label fx:id="box54" styleClass="wordle-box" text=" " GridPane.columnIndex="4" GridPane.rowIndex="5" />
+         </children>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
+      </GridPane>
+
+      <VBox alignment="CENTER" layoutX="0.0" layoutY="460.0" prefWidth="550.0" spacing="15.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+         <children>
+            <TextField fx:id="entrada" alignment="CENTER" onAction="#procesarIntento" prefHeight="35.0" prefWidth="300.0" promptText="Escribe tu palabra aquí" styleClass="wordle-input">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </TextField>
+            <Button mnemonicParsing="false" onAction="#reiniciarJuego" prefHeight="30.0" prefWidth="150.0" text="Reiniciar Juego" styleClass="wordle-button">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+         </children>
+      </VBox>
+
+   </children>
 </AnchorPane>
